@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 02-04-2005 fixed: Queuing a folder of music to a shuffled playlist doesn't shuffle the first song.
+  - 02-04-2005 fixed: Queuing albums from Nav view.
   - 01-04-2005 removed: mplayerdebug is no longer needed. Just setting loglevel to 0 will enabled mplayer logs.
   - 01-04-2005 removed: Old (not working) method of stopping ffwd + rewd on trigger release. 
   - 01-04-2005 changed: Renamed "Nav" view to "Library".
